--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,24 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^3.24.0
-  #cached_network_image: ^2.0.0
-  cloud_firestore: ^0.14.1+3
   firebase_auth: ^0.18.1+2
-  #provider: ^3.2.0
-  #google_sign_in: ^4.1.1
-  shared_preferences: ^0.5.6+3
-  random_string: ^2.0.1
-  #google_fonts: ^1.1.1
-  #firebase_storage: ^5.2.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  #cupertino_icons: ^1.0.0
-  file_picker: ^1.4.2
-  form_builder_file_picker: ^0.3.0
   path_provider: ^1.2.0
+  shared_preferences: ^0.5.6+3
+  cloud_firestore: ^0.14.1+3
+  random_string: ^2.0.1
+  form_builder_file_picker: ^0.3.0
   firebase_storage:
+  syncfusion_flutter_pdfviewer:
 
 dev_dependencies:
   flutter_test:
