--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,15 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth: ^0.18.1+2
-  path_provider: ^1.2.0
-  shared_preferences: ^0.5.6+3
   cloud_firestore: ^0.14.1+3
   random_string: ^2.0.1
   form_builder_file_picker: ^0.3.0
   firebase_storage:
   syncfusion_flutter_pdfviewer:
-  permission_handler: ^5.0.1+1
-  flutter_cached_pdfview: ^0.3.5
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       -  assets/welcome.png
-      -  assets/quiz.png
+      -  assets/20748595.jpg
    #- images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
