--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   random_string: ^2.0.1
   form_builder_file_picker: ^0.3.0
   firebase_storage:
+  firebase_core: ^0.5.0+1
+  firebase_messaging: ^5.0.2
   syncfusion_flutter_pdfviewer:
 
 dev_dependencies:
@@ -47,8 +49,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      -  assets/welcome.png
       -  assets/20748595.jpg
+      -  assets/4195199.jpg
    #- images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
