--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
 
         android:name="io.flutter.app.FlutterApplication"
-        android:label="quizapp"
+        android:label="STAA"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
